[package]
name = "commander-combo-breaker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
rfd = "0.15.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
scraper = "0.21.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
url-escape = "0.1.1"
uuid = { version = "1.11.0", features = ["v8", "v4"] }
walkdir = "2.5.0"
